Feat: Add shop section

--- a/src/input.css
+++ b/src/input.css
@@ -33,4 +33,7 @@
   .paddingXl {
     @apply py-8 px-2 sm:py-10 sm:px-4 lg:py-15 lg:px-4;
   }
+  .containers {
+    @apply max-w-[1440px] mx-auto;
+  }
 }
